<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">创新实验班</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="sybtext">实验班成员</string>
	<string name="sybpeotext">实验班项目</string>
	<string name="stuname">学生姓名</string>
	<string name="stuid">学生学号</string>
	<string name="stuemail">学生email</string>
	<string name="stucontact">联系方式</string>
	<string name = "stuimg">头像</string>
	<string name = "projectanme">项目名</string>
	<string name = "projectworker">开发者</string>
	<string name = "projectdescription">项目介绍</string>
	<string name = "projectimg">项目截图</string>
</resources>
