<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include 
        layout="@layout/activity_flipperimg"
        android:id="@+id/flipperimg"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:orientation="vertical"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/main_relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/sybpic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="68dp"
                android:maxHeight="68dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/people" />

            <TextView
                android:id="@+id/sybtext"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/sybpic"
                android:layout_alignTop="@+id/sybpic"
                android:textSize="20dp"
                android:background="#00ff00"
                android:text="@string/sybtext"
                android:gravity="center_horizontal|center_vertical" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/sybpeo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:maxWidth="68dp"
                android:maxHeight="68dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pro3" />

            <TextView
                android:id="@+id/sybpeotext"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/sybpeo"
                android:layout_alignTop="@+id/sybpeo"
                 android:textSize="20dp"
                android:background="#ff05f0"
                android:text="@string/sybpeotext"
                android:gravity="center_horizontal|center_vertical" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>